# lineindex

./: .bumpversion.cfg  .gitignore  DEVELOPMENT.md  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
benchmarks/: BENCHMARKS.md
docs/: api.rst  conf.py  index.rst  usage.rst
lineindex/: __init__.py
linex/: __init__.py  _version.py  cli.py  example.py  linex.py
tests/: conftest.py  test_cli.py  test_example.py  test_linex.py
